examples/manual/failing/RedefinedFixity.purs
module RedefinedFixity where

  (!?) x y = x + y

  infix 2 !?
  infix 2 !?
